# languages4ds

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  appendix.html  appendix.qmd  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml  test.qmd
.devcontainer/: devcontainer.json
_site/: about.html  index.html  listings.json  search.json  styles.css
data_science/: _metadata.yml
data_science/data/: penguins.csv
data_science/html/: bar_toolbox.html  map_globe_base.html  overlap_line_scatter.html
data_science/posts/: ADP_01.html  ADP_01.qmd  ADP_02.html  ADP_02.qmd  AoG_tutorial_01.html  AoG_tutorial_01.qmd  adp_29.html  adp_29.qmd  altair_tutorial.html  altair_tutorial.qmd  baysian_approach_for_estimation_for_covid19.html  baysian_approach_for_estimation_for_covid19.qmd  economist_style_with_matplotlib.html  economist_style_with_matplotlib.qmd  how_to_use_palette_in_matplotlib.html  how_to_use_palette_in_matplotlib.qmd  installing_packages_under_offline.html  installing_packages_under_offline.qmd  introduction_to_bayesian_differential_equations.html  introduction_to_bayesian_differential_equations.qmd  iris_data_visualization_with_altair.html  iris_data_visualization_with_altair.qmd  leos_syndrome.html  leos_syndrome.qmd  (+17 more)
languages4ds/: .gitignore  _quarto.yml  dataframe.qmd  intro.qmd  setup.qmd  syntax.qmd
posts/: test.html
practical_recipes/: _quarto.yml  about.qmd  index.qmd
recipes4ds/: _quarto.yml  appendix.html  intro.qmd  kotex.tex  requirements.txt  syntax.qmd  visualization.qmd
(+138 files in other folders)
