[tool.poetry]
name = "practical-recipes"
version = "0.1.0"
description = ""
authors = ["JunDamin <freedomgod@gmail.com>"]
readme = "README.md"
packages = [{include = "practical_recipes"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
